# projx

./: .gitignore  Cargo.toml
crates/google/: Cargo.toml  build.rs  discovery-calendar.js  discovery-gmail.js
crates/google/examples/: discover.rs  discover_multithreaded.rs
crates/google/src/: auth.rs  error.rs  google_oauth.rs  jwt_handler.rs  lib.rs  oauth.rs
crates/google/src/codegen/: builder.rs  client.rs  discovery.rs  discovery_doc.rs  mod.rs  traits.rs  utils.rs
crates/google/src/services/: mod.rs
crates/waveapp/: Cargo.toml  build.rs
crates/waveapp/schemas/: wave_api_schema_20240728.graphql
crates/waveapp/src/: client.rs  enums.rs  error.rs  io.rs  lib.rs  mutations.rs  queries.rs  query.rs  scalar.rs
crates/waveapp/src/io/: io.rs
crates/waveapp/src/queries/: businesses.rs  mod.rs
examples/: tokio_basic_tcp.rs
src/: main.rs
src/commands/: add_template.rs  create_project.rs  create_template.rs  mod.rs  project.rs  template.rs  tests.rs
src/llm/: mod.rs  ollama.rs  openai.rs
src/llm/providers/: error.rs  mod.rs  ollama.rs  openai.rs
src/templates/nodejs-webapp/: README.md  app.js  package.json  projx.toml
src/templates/nodejs-webapp/public/: index.html
src/templates/nodejs-webapp/public/css/: style.css
src/templates/nodejs-webapp/public/js/: script.js
src/templates/nodejs-webapp/routes/api/: hello.js  index.js
src/templates/nodejs-webapp/views/: 404.html
