[package]
name = "projx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dirs = "4.0"
ollama-rs = "0.2.0"
reqwest = {version = "0.12.5", features = ["json"]}
toml = "0.8.15"
whoami = "1.5.1"
tokio = { version = "1.38.1", features = ["full"] }
serde_json = "1.0.120"
