[package]
name = "google"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = {version = "0.99.18", features = ["from"]}
serde_json = "1.0.120"
reqwest = {version = "0.12.5", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
oauth2 = "4.4.2"