[package]
name = "waveapp"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = {version = "0.99.18", features = ["from"]}
serde_json = "1.0.120"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
reqwest = {version = "0.12.5", features = ["json"]}
cynic = "3.7.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }

[build-dependencies]
cynic-codegen = "3.7.3"
